<resources>
    <string name="app_name">Connect</string>
    <string name="copy_to_this">Copy text</string>
    <string name="trigger">Trig:</string>
    <string name="text_null">null</string>
    <string name="find_phone">Find phone</string>
    <string name="send_clipboard">Send clipboard text</string>
    <string name="get_triger">Listen</string>
    <string name="clear">Clear</string>
    <string name="description">Please send the trigger messaage from the other device or edit the value. It will be
        trigger when the message is received again in the device.
    </string>
    <string name="tag">TAG:</string>
    <string name="text_put_title">Title</string>
    <string name="smashicons">Icons made by\n\"Smashicons\"\nhttps://www.flaticon.com/authors/smashicons\nCreative
        Commons BY 3.0\nhttp://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="yannick">Icons made by\n\"Yannick\"\nhttps://www.flaticon.com/authors/yannick\nCreative Commons BY
        3.0\nhttp://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="cresnar">Icons made by\n\"Gregor Cresnar\"\nhttps://www.flaticon.com/authors/gregor-cresnar\nCreative
        Commons BY 3.0\nhttp://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="freepik">Icons made by\n\"Freepik\"\https://www.freepik.com/\nCreative Commons BY
        3.0\nhttp://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="icongeek26">Icons made by\n\"Icongeek26\"\nhttps://www.flaticon.com/authors/icongeek26\nCreative
        Commons BY 3.0\nhttp://creativecommons.org/licenses/by/3.0/
    </string>
    <string name="credit">Credit:</string>
    <string name="password">Password</string>
    <string name="text_ip">IP:</string>
    <string name="text_port">Port:</string>
    <string name="text_port_value">Put port</string>
    <string name="text_ip_adres">Your IP address</string>
    <string name="enable_custom">Enable custom activity</string>
    <string name="save">Save</string>
    <string name="log">Log</string>
    <string name="customactivity">Custom activities</string>
    <string name="logger">Log view</string>
    <string name="about">About</string>
    <string name="enable_toast">Enable Toast</string>
    <string name="plugin_name">Connect</string>
    <string name="tag_string">TAG</string>
    <string name="put_tag_here">Put tag here</string>
    <string name="is_message_type">This is a message</string>
    <string name="is_response_type">This is a response</string>
    <string name="message">Message</string>
    <string name="put_long_message">Put message here</string>
    <string name="put_your_task_uuid">will add uuidToCheck(so add %idtoadd)</string>
    <string name="message_id">Message ID</string>
    <string name="messagesalt">Salt to Add</string>
    <string name="salttocheck">Salt as variable</string>
    <string name="extra">Extras</string>
    <string name="extra_text">Extras:</string>
    <string name="plus_sign">+</string>
    <string name="plus_minus">-</string>
    <string name="is_it_intent">Is it intent ?</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="semicolon">:</string>
    <string name="receiver">Receiver</string>
    <string name="put_ip_here">Receiver Ip address</string>
    <string name="receiver_port">Port</string>
    <string name="is_it_success">is task success?</string>
    <string name="password_local_only">Password(only for custom activity)</string>
    <string name="task_name">Task name</string>
    <string name="taskname_hint">Task name</string>
    <string name="is_response_type_event">Response</string>
    <string name="is_message_type_event">Message</string>
    <string name="optional_msg_uuid">Msg UUID (optional)</string>
    <string name="logon">Turn on log</string>
    <string name="logoff">Turn off log</string>
    <string name="i_m_here">Hello\nI am Here!!!</string>
    <string name="okey">Ok</string>
</resources>
