<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/dark_grey"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_it_is_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/is_message_type"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_it_is_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/is_response_type"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/checkbox_is_it_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_it_intent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/plugin_group_height"
            android:layout_marginStart="@dimen/smalest_margin_from_wall"
            android:layout_marginEnd="@dimen/smalest_margin_from_wall">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:gravity="center|left"
                android:text="@string/receiver"
                android:textColor="@color/black"
                android:textSize="@dimen/plugin_title_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editplugin_ip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/put_ip_here"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/plugin_text_size" />

                <EditText
                    android:id="@+id/editplugin_port"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="@string/receiver_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/plugin_text_size" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_meaasge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_group_height"
                android:layout_marginStart="@dimen/smalest_margin_from_wall"
                android:layout_marginEnd="@dimen/smalest_margin_from_wall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plugin_object_height"
                    android:gravity="center|left"
                    android:text="@string/tag_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/plugin_title_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plugin_object_height"
                    android:layout_gravity="bottom">

                    <EditText
                        android:id="@+id/editplugin_tag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/put_tag_here"
                        android:maxLines="1"
                        android:textSize="@dimen/plugin_text_size" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

        <include
            layout="@layout/include_response_type"
            android:visibility="gone" />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_group_height"
                android:layout_marginStart="@dimen/smalest_margin_from_wall"
                android:layout_marginEnd="@dimen/smalest_margin_from_wall">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plugin_object_height"
                    android:gravity="center|left"
                    android:text="@string/message_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/plugin_title_text"
                    android:textStyle="bold" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plugin_object_height"
                    android:layout_gravity="bottom">

                <EditText
                        android:id="@+id/editplugin_message_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/optional_msg_uuid"
                        android:maxLines="1"
                        android:textSize="@dimen/plugin_text_size" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/plugin_group_height"
            android:layout_marginStart="@dimen/smalest_margin_from_wall"
            android:layout_marginEnd="@dimen/smalest_margin_from_wall">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:gravity="center|left"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/plugin_title_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:layout_gravity="bottom">


                <EditText
                    android:id="@+id/editplugin_message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/put_long_message"
                    android:maxLines="1"
                    android:textSize="@dimen/plugin_text_size" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/plugin_group_height"
            android:layout_marginStart="@dimen/smalest_margin_from_wall"
            android:layout_marginEnd="@dimen/smalest_margin_from_wall">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:gravity="center|left"
                android:text="@string/task_name"
                android:textColor="@color/black"
                android:textSize="@dimen/plugin_title_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/plugin_object_height"
                android:layout_gravity="bottom">


                <EditText
                    android:id="@+id/editplugin_taskname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/taskname_hint"
                    android:maxLines="1"
                    android:textSize="@dimen/plugin_text_size" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smalest_margin_from_wall"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_text"
                android:textColor="@color/black"
                android:textSize="@dimen/plugin_title_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/but_plus_sign"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/plus_sign"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/but_minus_sign"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/plus_minus"
                    android:textSize="20dp" />


            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_extra_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>