<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="left"
            android:text="@string/text_ip"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="50dp"/>
        <TextView
            android:id="@+id/tv_ip_adress"
            android:gravity="center|right"
            android:layout_marginRight="40dp"
            android:hint="@string/text_ip_adres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"/>
    </LinearLayout>

<FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="left"
            android:text="@string/text_port"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="50dp"/>
        <EditText
            android:id="@+id/edit_port_value"
            android:layout_marginRight="40dp"
            android:layout_gravity="right"
            android:inputType="number"

            android:hint="@string/text_port_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30dp"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/draw_key" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="15dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:textSize="30dp" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="left"
            android:text="@string/enable_custom"
            android:textStyle="bold"
            android:gravity="center|left"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25dp"/>
        <Switch
            android:id="@+id/switch_enable_custom_activity"
            android:layout_gravity="right|center"
            android:layout_marginRight="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_custom_view"
            android:layout_gravity="left"
            android:text="@string/customactivity"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="35dp"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_log_view"
            android:layout_gravity="left"
            android:text="@string/logger"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="35dp"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_about"
            android:layout_gravity="left"
            android:text="@string/about"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="35dp"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/but_save"
            android:text="@string/save"
            android:enabled="false"
            android:textAllCaps="false"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"/>
    </FrameLayout>
    </LinearLayout>
</ScrollView>