<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:gravity="bottom|center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_cust_axtivity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_put_title"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="30dp"
                android:text="@string/tag"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_trigger_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:hint="@string/text_null"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_listen_or_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/get_triger"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/but_clear_trigger_message_set_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textAllCaps="false" />


    </LinearLayout>

</FrameLayout>