<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@color/dark_grey"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_extra_key"
        android:gravity="center|left"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:textSize="@dimen/plugin_text_size" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/plugin_text_size"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/semicolon"/>
    <EditText
        android:id="@+id/edit_extra_value"
        android:layout_weight="1"
        android:gravity="center|left"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:textSize="@dimen/plugin_text_size" />
</LinearLayout>