<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:text="@string/credit"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:text="@string/freepik"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:text="@string/smashicons"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:text="@string/yannick"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:text="@string/cresnar"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:text="@string/icongeek26"
                />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>